# learning-python-cli

./: README.md  main.py  pyproject.toml
hi/: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py
hi/.github/: ISSUE_TEMPLATE.md
hi/docs/: conf.py  index.rst  installation.rst  usage.rst
hi/hi/: __init__.py  cli.py
hi/tests/: __init__.py  test_hi.py
