[tool.poetry]
name = "repl_python3_learning-python-cli"
version = "0.1.0"
description = ""
authors = ["Dragonlord1005 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
alive-progress = "^2.0.0"
tinyscript = "^1.24.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
